--- a/Ecommerce/.env
+++ b/Ecommerce/.env
@@ -1,2 +1,1 @@
-VITE_API_URL=https://3000-prithivraj0-ecommerceba-m0kcjv1xyk2.ws-eu117.gitpod.io
-
+VITE_API_URL=https://3000-prithivraj0-ecommerceba-m0kcjv1xyk2.ws-us117.gitpod.io
